# ToDo_List

./: Documentation.py  README.md  app.js  apps.py  asgi.py  index.html  models.py  pyproject.toml  requirements.txt  serializers.py  settings.py  style.css  urls.py  views.py  wsgi.py
